@@ -7,18 +7,19 @@
 			return;
 		}
 
-		var sectionId      = $scope.data( 'id' ),
-			color          = $scope.data( 'color' ),
+		var color          = $scope.data( 'color' ),
 			angle          = $scope.data( 'angle' ),
 			gradientColor  = 'linear-gradient( ' + angle + ',' + color + ' )';
 		
 		$scope.css( 'background-image', gradientColor );
 
 		if ( elementorFrontend.isEditMode() ) {
-			color = $scope.find( '.pp-animated-gradient-bg' ).data( 'color' );
-			angle = $scope.find( '.pp-animated-gradient-bg' ).data( 'angle' );
-			var gradientColorEditor = 'linear-gradient( ' + angle + ',' + color + ' )';
-			$scope.prepend( '<div class="pp-animated-gradient-bg" style="background-image : ' + gradientColorEditor + ' "></div>' );
+			var bg_overlay       = $scope.find( '.elementor-element-overlay ~ .elementor-background-overlay' ),
+				animated_bg_wrap = $scope.find( '.pp-animated-gradient-bg' );
+
+			if ( bg_overlay.next( '.pp-animated-gradient-bg' ).length == 0 ) {
+				bg_overlay.after( animated_bg_wrap );
+			}
 		}
 
 	};
